Release 1.0 (in development)
============================

* The ``toctree()`` callable in templates now has a ``maxdepth``
  keyword argument to control the depth of the generated tree.

* Added Catalan translation, thanks to Pau Fernández.

* Added new minimal theme called scrolls.

* Added ``html_output_encoding`` config value.

* #200: Added ``Sphinx.add_stylesheet()``.

* Added ``titlesonly`` option to ``toctree`` directive.

* Removed the deprecated ``sphinx.builder`` module.

* #193: Added a ``visitedlinkcolor`` theme option to the default
  theme.

* Added the ``prepend`` and ``append`` options to the
  ``literalinclude`` directive.

* Added the ``latex_docclass`` config value and made the "twoside"
  documentclass option overridable by "oneside".

* Added the ``trim_doctest_flags`` config value, which is true by default.

* Added the ``extlinks`` extension.

* Allow searching for object names including the module name, like
  ``sys.argv``.

* Many improvements and fixes to the ``autosummary`` extension,
  thanks to Pauli Virtanen.

* Added ``html_show_copyright`` config value.

* Added simplified Chinese locale.

* Added ``latexpdf`` target in quickstart Makefile.


Release 0.6.4 (in development)
==============================

* Fix the handling of non-data, but non-method descriptors in autodoc.


Release 0.6.3 (Sep 03, 2009)
============================

* Properly add C module filenames as dependencies in autodoc.

* #253: Ignore graphviz directives without content instead of
  raising an unhandled exception.

* #241: Fix a crash building LaTeX output for documents that contain
  a todolist directive.

* #252: Make it easier to change the build dir in the Makefiles
  generated by quickstart.

* #220: Fix CSS so that displaymath really is centered.

* #222: Allow the "Footnotes" header to be translated.

* #225: Don't add whitespace in generated HTML after inline tags.

* #227: Make ``literalinclude`` work when the document's path